--- a/setup.cfg
+++ b/setup.cfg
@@ -26,6 +26,6 @@ branch = True
 cover_pylib = False
 # omit uninteresting files
 omit =
-    polls/tests.py
-    polls/migrations/*
+    eve_holder/tests.py
+    eve_holder/migrations/*
     manage.py
