add branch ignore

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -3,8 +3,10 @@ name: Django CI
 on:
   push:
     branches: [ master, iteration*]
+    branches-ignore: [iteration*-*]
   pull_request:
     branches: [ master, iteration* ]
+    branches-ignore: [iteration*-*]
 
 jobs:
   build:
