update ci config

--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           python manage.py makemigrations
           python manage.py migrate
-          coverage run manage.py test
+          coverage run manage.py test --no-input
       - name: Coverage Report
         run: |
           bash <(curl -s https://codecov.io/bash)
