--- a/setup.cfg
+++ b/setup.cfg
@@ -22,7 +22,7 @@ exclude =
 [coverage:run]
 # measure branch coverage
 branch = True
-# don't test the Python standard library
+# don't tests the Python standard library
 cover_pylib = False
 # omit uninteresting files
 omit =
