--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,11 @@ jobs: # A basic unit of work in a run
             sudo chown -R circleci:circleci /usr/local/lib/python3.7/site-packages
       - restore_cache: # Read about caching dependencies: https://circleci.com/docs/2.0/caching/
           key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
-#      - run:
-#          name: Install pipenv
-#          command: |
-#            sudo pip install pipenv
-#            pipenv install
+      - run:
+          name: Install pipenv
+          command: |
+            sudo pip install pipenv
+            pipenv install
       - save_cache: # cache Python dependencies using checksum of Pipfile as the cache-key
           key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
