--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,10 +40,10 @@ jobs: # A basic unit of work in a run
           key: deps9-{{ .Branch }}-{{ checksum "requirements.txt" }}
           paths:
             - "venv"
-#      - run:
-#          name: Migrating models to the database
-#          command: |
-#            pipenv run python manage.py migrate
+      - run:
+          name: Migrating models to the database
+          command: |
+            pipenv run python manage.py migrate
       - run:
           name: Run test
           command: |
