--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,9 @@ git:
 install:
   - pip install -r requirements.txt
 
+before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
+
 # script to run tests. Script can have many commands, one per line.
 script:
   - coverage run manage.py test polls
