--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,9 @@ services:
 install:
   - pip install -r requirements.txt
 
+env:
+  - DATABASE_URL=psql://postgres@127.0.0.1:5433/travis_ci_test
+
 before_script:
   - psql -c 'create database travis_ci_test;' -U postgres
 
