--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_script:
 
 # script to run tests. Script can have many commands, one per line.
 script:
-  - coverage run manage.py test polls
+  - coverage run manage.py test
 
 after_script:
   - bash <(curl -s https://codecov.io/bash)
