--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Requirement for run CI/CD
 coverage
-Django
+Django~=3.1.3
 django-environ
 psycopg2
 django-crispy-forms
-django-filter
+python-decouple~=3.3
+dj-database-url~=0.5.0
+django-filter~=2.4.0
