--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,5 @@
 version: 2.1 # use CircleCI 2.1
+
 jobs: # A basic unit of work in a run
   build: # runs not using Workflows must have a `build` job as entry point
     # directory where steps are run
@@ -20,6 +21,7 @@ jobs: # A basic unit of work in a run
         environment: # environment variables for the Postgres container.
           POSTGRES_USER: root
           POSTGRES_DB: circle_test
+
     steps: # steps that comprise the `build` job
       - checkout # check out source code to working directory
       - run:
@@ -44,6 +46,10 @@ jobs: # A basic unit of work in a run
           name: Run test
           command: |
             pipenv run coverage run manage.py test --noinput
+      - run:
+          name: Send to codecov
+          command: |
+            bash <(curl -s https://codecov.io/bash)
       - store_test_results: # Upload test results for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
           path: test-results
       - store_artifacts: # Upload test summary for display in Artifacts: https://circleci.com/docs/2.0/artifacts/
