--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs: # A basic unit of work in a run
       - run:
           name: Ensuring installed dependencies
           command: |
-            sudo pip install pipenvไ
+            sudo pip install pipenv
             pip install -r requirements.txt
             python3 -m venv --system-site-packages venv/
             . venv/bin/activate
