--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 # Requirement for run CI/CD
 coverage
-Django~=3.1.3
+Django
 django-environ
 psycopg2
 django-crispy-forms
-python-decouple~=3.3
-dj-database-url~=0.5.0
-django-filter~=2.4.0
+python-decouple
+dj-database-url
+django-filter
