--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ jobs: # A basic unit of work in a run
       - run:
           name: Run test
           command: |
+            . venv/bin/activate
             pipenv run python manage.py group
             pipenv run coverage run manage.py test --noinput
       - run:
