--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,13 +45,13 @@ jobs: # A basic unit of work in a run
       - run:
           name: Migrating models to the database
           command: |
-            pipenv run python3 manage.py migrate
+            python3 manage.py migrate
       - run:
           name: Run test
           command: |
             . venv/bin/activate
-            pipenv run python manage.py group
-            pipenv run coverage run manage.py test --noinput
+            python manage.py group
+            coverage run manage.py test --noinput
       - run:
           name: Send to codecov
           command: |
