--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,6 +43,7 @@ jobs: # A basic unit of work in a run
       - run:
           name: Migrating models to the database
           command: |
+            pipenv shell
             pipenv run python3 manage.py migrate
       - run:
           name: Run test
