comment activate env and migration

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,20 +40,20 @@ jobs: # A basic unit of work in a run
           key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
             - "venv"
-      - run:
-          name: Activate pipenv
-          command: |
-            pipenv shell
-      - run:
-          name: Migrating models to the database
-          command: |
-            pipenv run python manage.py makemigrations
-            pipenv run python manage.py migrate
+#      - run:
+#          name: Activate pipenv
+#          command: |
+#            pipenv shell
+#      - run:
+#          name: Migrating models to the database
+#          command: |
+#            pipenv run python manage.py makemigrations
+#            pipenv run python manage.py migrate
       - run:
           name: Run test
           command: |
             pipenv run python manage.py group
-            piprnv run coverage run manage.py test --noinput
+            pipenv run coverage run manage.py test --noinput
       - run:
           name: Send to codecov
           command: |
