--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,7 +43,7 @@ jobs: # A basic unit of work in a run
       - run:
           name: Migrating models to the database
           command: |
-            . venv/bin/activate
+            pipenv shell
             python manage.py makemigrations
             python manage.py migrate
       - run:
