change config file

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,7 +33,6 @@ jobs: # A basic unit of work in a run
           command: |
             pipenv install
             python3 -m venv --system-site-packages venv/
-            ./venv/bin/activate
       - save_cache:
           paths:
             - ./venv
@@ -41,8 +40,8 @@ jobs: # A basic unit of work in a run
       - run:
           name: Running tests
           command: |
-            ./venv/bin/activate
-            coverage run manage.py test --noinput
+            pipenv run python3 manage.py group
+            pipenv run coverage run manage.py test --noinput
       - run:
           name: Send to codecov
           command: |
