--- a/Pipfile
+++ b/Pipfile
@@ -4,71 +4,15 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-coverage = "==5.3"
-django-environ = "==0.4.5"
-psycopg2 = "==2.8.6"
-django-crispy-forms = "==1.10.0"
-python-decouple = "==3.3"
-dj-database-url = "==0.5.0"
-django-filter = "==2.4.0"
-Django = "==3.1.3"
-appdirs = "==1.4.4"
-asgiref = "==3.3.1"
-atomicwrites = "==1.4.0"
-attrs = "==20.3.0"
-autopep8 = "==1.5.4"
-certifi = "==2020.11.8"
-chardet = "==3.0.4"
-colorama = "==0.4.4"
-decorator = "==4.4.2"
-distlib = "==0.3.1"
-filelock = "==3.0.12"
-flake8 = "==3.8.4"
-flake8-docstrings = "==1.5.0"
-function = "==1.2.0"
-grid = "==0.7.1"
-idna = "==2.10"
-imageio = "==2.9.0"
-importlib-metadata = "==2.0.0"
-iniconfig = "==1.1.1"
-kiwisolver = "==1.3.1"
-matplotlib = "==3.3.3"
-mccabe = "==0.6.1"
-more-itertools = "==8.6.0"
-networkx = "==2.5"
-numpy = "==1.19.4"
-numpy-turtle = "==0.2"
-pandas = "==1.1.4"
-pipenv = "==2020.11.15"
-pluggy = "==0.13.1"
-public = "==2020.7.1"
-py = "==1.9.0"
-pycodestyle = "==2.6.0"
-pydocstyle = "==5.1.1"
-pyflakes = "==2.2.0"
-pygame = "==2.0.0"
-pyparsing = "==2.4.7"
-pytest = "==6.1.2"
-python-dateutil = "==2.8.1"
-python-environ = "==0.4.54"
-pytz = "==2020.4"
-requests = "==2.25.0"
-scikit-image = "==0.17.2"
-scipy = "==1.5.4"
-self = "==2020.7.1"
-six = "==1.15.0"
-snowballstemmer = "==2.0.0"
-sqlparse = "==0.4.1"
-tifffile = "==2020.11.18"
-toml = "==0.10.2"
-urllib3 = "==1.26.2"
-virtualenv = "==20.1.0"
-virtualenv-clone = "==0.5.4"
-wcwidth = "==0.2.5"
-zipp = "==3.4.0"
-Cycler = "==0.10.0"
-Pillow = "==8.0.1"
-PyWavelets = "==1.1.1"
+coverage = "~=5.3"
+django-environ = "~=0.4.5"
+psycopg2 = "~=2.8.6"
+django-crispy-forms = "~=1.10.0"
+python-decouple = "~=3.3"
+dj-database-url = "~=0.5.0"
+django-filter = "~=2.4.0"
+Django = "~=3.1.3"
+Pillow = "~=8.0.1"
 
 [dev-packages]
 
