edit new models.py and delete apps name in migrate

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,8 @@ jobs: # A basic unit of work in a run
       - run:
           name: Migrating models to the database
           command: |
-            pipenv run python manage.py makemigrations eve_holder
-            pipenv run python manage.py migrate eve_holder
+            pipenv run python manage.py makemigrations
+            pipenv run python manage.py migrate
       - run:
           name: Run test
           command: |
