--- a/mysite/sample.env
+++ b/mysite/sample.env
@@ -1,6 +1,5 @@
 SECRET_KEY=any-random-string-will-work
 # set DEBUG to True for testing and local development
 DEBUG=False
-# comma separated list of allowed hosts. May use suffixes and * as wildcard
-ALLOWED_HOSTS="localhost, testserver"
+DATABASE_URL=psql://postgres:postgrespassword@127.0.0.1:port/database_name
 TIME_ZONE=Asia/Bangkok
