change database settings

--- a/mysite/sample.env
+++ b/mysite/sample.env
@@ -1,5 +1,12 @@
 SECRET_KEY=any-random-string-will-work
 # set DEBUG to True for testing and local development
 DEBUG=False
-DATABASE_URL=psql://postgres:postgrespassword@127.0.0.1:port/database_name
+
+DATABASE_ENGINE=your-database-engine
+DATABASE_NAME=eve_holder_db
+DATABASE_USER=Database-Username
+DATABASE_PASSWORD=Database-Pass
+DATABASE_HOST=Your-Database_Host
+DATABASE_PORT=5432
+
 TIME_ZONE=Asia/Bangkok
