--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 # Requirement for run CI/CD
+boto3~=1.16.23
 coverage~=5.3
 django~=3.1.3
 django-environ~=0.4.5
+django-storages~=1.10.1
 psycopg2~=2.8.6
 django-crispy-forms~=1.10.0
 python-decouple~=3.3
