change database to database_url form

--- a/mysite/sample.env
+++ b/mysite/sample.env
@@ -2,11 +2,6 @@ SECRET_KEY=any-random-string-will-work
 # set DEBUG to True for testing and local development
 DEBUG=False
 
-DATABASE_ENGINE=your-database-engine
-DATABASE_NAME=eve_holder_db
-DATABASE_USER=Database-Username
-DATABASE_PASSWORD=Database-Pass
-DATABASE_HOST=Your-Database_Host
-DATABASE_PORT=5432
+DATABASE_URL=psql://postgre:password@127.0.0.1:5432/database_name
 
 TIME_ZONE=Asia/Bangkok
