--- a/mysite/sample.env
+++ b/mysite/sample.env
@@ -1,7 +1,10 @@
 SECRET_KEY=any-random-string-will-work
 # set DEBUG to True for testing and local development
 DEBUG=False
-
+ALLOWED_HOSTS=127.0.0.1
 DATABASE_URL=psql://postgre:password@127.0.0.1:5432/database_name
-
 TIME_ZONE=Asia/Bangkok
+
+AWS_ACCESS_KEY_ID=AKIA53OY5OB43MNVXCGS
+AWS_SECRET_ACCESS_KEY=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
+AWS_STORAGE_BUCKET_NAME=eve-holder-bucket
