--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs: # A basic unit of work in a run
           name: Ensuring installed dependencies
           command: |
             sudo pip install pipenv
-            pipenv install
+            pipenv install -r requirements.txt
       - save_cache: # cache Python dependencies using checksum of Pipfile as the cache-key
           key: deps9-{{ .Branch }}-{{ checksum "Pipfile.lock" }}
           paths:
