--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,11 @@ dj-database-url = "~=0.5.0"
 django-filter = "~=2.4.0"
 Django = "~=3.1.3"
 Pillow = "~=8.0.1"
+boto3 = "~=1.16.23"
+django-storages = "~=1.10.1"
+django-widget-tweaks = "~=1.4.8"
+gunicorn = "~=20.0.4"
+whitenoise = "~=5.2.0"
 
 [dev-packages]
 
