--- a/mysite/sample.env
+++ b/mysite/sample.env
@@ -5,6 +5,6 @@ ALLOWED_HOSTS=127.0.0.1
 DATABASE_URL=psql://postgre:password@127.0.0.1:5432/database_name
 TIME_ZONE=Asia/Bangkok
 
-AWS_ACCESS_KEY_ID=your-s3-access-key
-AWS_SECRET_ACCESS_KEY=your-s3-secret-access-key
-AWS_STORAGE_BUCKET_NAME=eve-holder-bucket
+#AWS_ACCESS_KEY_ID=your-s3-access-key
+#AWS_SECRET_ACCESS_KEY=your-s3-secret-access-key
+#AWS_STORAGE_BUCKET_NAME=eve-holder-bucket
