--- a/Pipfile
+++ b/Pipfile
@@ -11,13 +11,14 @@ django-crispy-forms = "~=1.10.0"
 python-decouple = "~=3.3"
 dj-database-url = "~=0.5.0"
 django-filter = "~=2.4.0"
-Django = "~=3.1.3"
+Django = "~=3.1.4"
 Pillow = "~=8.0.1"
-boto3 = "~=1.16.23"
+boto3 = "~=1.16.29"
 django-storages = "~=1.10.1"
 django-widget-tweaks = "~=1.4.8"
 gunicorn = "~=20.0.4"
 whitenoise = "~=5.2.0"
+psycopg2-binary = "~=2.8.6"
 
 [dev-packages]
 
