--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ django-crispy-forms~=1.10.0
 python-decouple~=3.3
 dj-database-url~=0.5.0
 django-filter~=2.4.0
-pillow~=8.0.1
+Pillow>=8.1.1
 django-widget-tweaks~=1.4.8
 gunicorn~=20.0.4
 whitenoise~=5.2.0
