--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 # Requirement for run CI/CD
-boto3~=1.16.29
-coverage~=5.3
-django~=3.1.4
-django-environ~=0.4.5
-django-storages~=1.10.1
-django-crispy-forms~=1.10.0
-python-decouple~=3.3
-dj-database-url~=0.5.0
-django-filter~=2.4.0
-pillow~=8.0.1
-django-widget-tweaks~=1.4.8
-gunicorn~=20.0.4
-whitenoise~=5.2.0
-psycopg2-binary~=2.8.6
-psycopg2~=2.8.6
+boto3>=1.16.29
+coverage>=5.3
+django>=3.1.4
+django-environ>=0.4.5
+django-storages>=1.10.1
+django-crispy-forms>=1.10.0
+python-decouple>=3.3
+dj-database-url>=0.5.0
+django-filter>=2.4.0
+pillow>=8.0.1
+django-widget-tweaks>=1.4.8
+gunicorn>=20.0.4
+whitenoise>=5.2.0
+psycopg2-binary>=2.8.6
+psycopg2>=2.8.6
