--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 boto3>=1.16.29
 coverage>=5.3
 django>=3.1.4
+django-heroku>=0.3.1
 django-environ>=0.4.5
 django-storages>=1.10.1
 django-crispy-forms>=1.10.0
