--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ python-decouple = "~=3.3"
 dj-database-url = "~=0.5.0"
 django-filter = "~=2.4.0"
 Django = "~=3.1.12"
+django-heroku = "~=0.3.1"
 Pillow = "~=8.2.0"
 boto3 = "~=1.16.29"
 django-storages = "~=1.10.1"
